You can pick your President and you can pick your nose, but...
Adds another hilarious gif and some sizing to images. It's not fully
responsive but, baby steps.

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+.gifs {
+  width: 420px;
+  height: 220px;
+}
 
 
 
