Reviewing alleged CSS fraud and supression

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.gifs {
+.gifs img {
   width: 420px;
   height: 220px;
 }
