Much negative press covfefe
Adds bigly tremendous pizazz and styles that are presidential AF.

Also rearranges some layout and does other yuge stuff.

Adds a section for quotes of all the offensive obnoxious stuff the
losers and haters can't stand. Sad!

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,13 @@ html {
     line-height: 1.4;
 }
 
+html, body {
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -95,24 +102,96 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.gifs img {
-  width: 420px;
-  height: 220px;
+.header:before {
+  content: ' ';
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.6;
+  background-image: url(https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg);
+  background-size: cover;
 }
 
+.header, .footer {
+  position: relative;
+  overflow: hidden;
+}
 
+.header {
+  text-align: center;
+}
 
+.footer {
+  text-align: center;
+}
 
+.anti-hero {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin: 0px;
+  min-width: 100%;
+  min-height: 87%;
 
+  /* Position and center the background to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
+.gifs {
+  height: 100%;
+  position: absolute;
+}
+.gifs img {
+  width: 355px;
+  height: 220px;
+  margin: 0;
+  padding: 0;
+}
 
+.mal-content {
+  margin: 0px;
+  min-width: 100%;
+  min-height: 100%;
+}
 
+.mal-content h2 {
+  padding-top: 42px;
+}
 
+.panel-transparent {
+  padding-top: 8%;
+  padding-bottom: 8%;
+  margin: 0px;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
 
+.panel-red {
+  background-color:#BF0A30;
+  padding-top: 12%;
+  padding-bottom: 12%;
+  margin: 0px;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
 
+.panel-white {
+  background-color: #FFFFFF;
+}
 
-
-
+.panel-blue {
+  background-color:#002868;
+}
 
 /* ==========================================================================
    Helper classes
